--- a/index.html
+++ b/index.html
@@ -2,43 +2,54 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>CakeStoryBrochure-test</title>
-        <style>
-          body {
-            background-color: rgb(184, 175, 149);
-            font-family: cursive;
-            line-height:25px;
-          }
-          h1 {
-            font-size: 70px;
-            font-family: cursive;
-            text-align: center; 
-            color: rgb(156, 121, 189);
-          }
-          a {
-            font-size: 15px;
-          }
-          p{
-            font-size: 25px;
-            color: rgb(69, 47, 89);
-          }
-          h2 {
-            font-size: 40px;
-            color: rgb(156, 121, 189);
-
-          }
-          
-          
-        </style>
+        <title>Takoyaki-grenade</title>
+      <style>
+        h1 {
+          font-size: 60px;
+        }
+      </style>
     </head>
     <body>
-      <h1><strong> CakeStory by m</strong> <h1>
-      <h2> Where to find us</h2>
-      <a target="_blank"href="https://maps.app.goo.gl/UvJpcw6WXs8S86TBA">Google Maps Location</a>
-      <p> 32 Donna Avenue, Rochedale South </p>
-      <br>
-      <h2> Collecting your order </h2>
-      <p> After discussing the estimated time you can collect the order, come to the address. If you might be early or late please alert us. Press the doorbell down stairs next to the garage and we will be with you shortly.</p>
+      <h1> Wow i didnt think you would make it this far</h1>
+      <p>Congratulations but it only gets worse from here. Below theres about twenty links.... One might lead to your next clue. The real answer is usually within. </p>
+   <ul> 
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <li><a href="https://youtu.be/xvFZjo5PgG0?si=3LMPToz8bZHYIUXr" target="_blank">Might be this one</a></li>
+     <p> Coding is fun :D</p>
+   </ul>
+     <!--Wow you're good....
+I didn't think you would come this far...
+the actual link is here...
+https://youtu.be/YaKR9zIAr3g-->
     </body>
 </html>
-
